--- a/school/templates/school/includes/add-student-app/script.html
+++ b/school/templates/school/includes/add-student-app/script.html
@@ -1,9 +1,13 @@
-{% include "accounting/includes/account-app/select-script.html" %}
+{% include "accounting/includes/person-account-app/select-script.html" %}
 <script>
   let add_student_app = new Vue({
     el: "#add-student-app",
     data: {
-    title: "", 
+      
+      person_account_code:"0",
+      person_account:{}, 
+      message:{show:false},
+      waiting:false,
     },
 
     components: {
@@ -11,11 +15,27 @@
     },
     methods: {
       
+      select_person_account: function () {
+          select_person_account_by_code(add_student_app.person_account_code).done((data) => {
+              if (data.result === "SUCCEED") {
+                  add_student_app.person_account = data.person_account;
+              } else {
+                  add_student_app.person_account = {}
+              }
+        });
+      },
+      
+ 
+
+      to_price: (vall,curr)=> to_price(vall,curr),
+     
+      to_price_colored: (vall,curr)=> to_price_colored(vall,curr),
+     
  
       add_student: function () {
         let payload = {
           csrfmiddlewaretoken: csrfmiddlewaretoken,
-          title: this.title, 
+          person_account_id: this.person_account.id, 
         };
 
         console.log(payload);
@@ -28,6 +48,11 @@
             if (typeof students_app != "undefined") {
               students_app.students.push(data.student);
             }
+            show_message(add_student_app,'موفق',data.message,'success',3000)
+          }
+          else{
+                        
+            show_message(add_student_app,'خطا',data.message,'danger',3000)
           }
         });
       },
