--- a/school/templates/school/includes/add-teacher-app/template.html
+++ b/school/templates/school/includes/add-teacher-app/template.html
@@ -22,21 +22,10 @@
     >
       <div class="card-body">
         <form @submit.prevent="add_teacher()">
-          <div class="row">
+          <div class="row"> 
             <div class="col-md-12">
-              <div class="form-group">
-                <label for="">عنوان</label>
-                <input
-                  required
-                  v-model="title"
-                  type="text"
-                  class="form-control"
-                />
-              </div>
-            </div>
-                <div class="col-md-12">
               <div class="row">
-                <div class="col-6">
+                <div class="col-4">
                   <div class="form-group">
                     <label for="person_account_code">حساب</label>
                     <input
@@ -50,7 +39,7 @@
                   </div>
                 </div>
 
-                <div class="col-6 mt-3">
+                <div class="col-8 mt-3">
                   <a :href="person_account.get_absolute_url" v-if="person_account.thumbnail">
                     <div class="media">
                       <img :src="person_account.thumbnail" width="64" alt="" />
@@ -85,6 +74,7 @@
                   </a>
                   <div v-if="!person_account.id">
                     <h5 class="text-danger">حساب انتخاب نشده است.</h5>
+                    <a target="_blank" href="{% url 'accounting:person_accounts' %}">همه حساب ها</a>
                   </div>
                 </div>
               </div>
